--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.0)
 
 add_executable(rpdemo ${CMAKE_CURRENT_SOURCE_DIR}/demo.cpp)
-target_link_libraries(rpdemo PUBLIC rplidar_cpp)
+target_link_libraries(rpdemo PUBLIC ${PROJECT_NAME})
